Carga de index terminada

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
     </servlet>
     <servlet>
         <servlet-name>response</servlet-name>
-        <servlet-class>com.daw.atlanthis.servlet.response</servlet-class>
+        <servlet-class>com.daw.atlanthis.servlet.responseCategorias</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>Faces Servlet</servlet-name>
